# kioku-agent-kit

./: .coverage  .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.full.yml  docker-compose.minimal.yml  pyproject.toml  update_sqlite.py
.github/workflows/: ci.yml
docs/: 01-requirements.md  02-system-design.md  03-implementation-plan.md  05-identity-mapping.md  06-restructure-plan.md  07-phase7-plan.md  DEVLOG-phase7.md  DEVLOG-phase8.md  DEVLOG-restructure.md  DEVLOG.md  ISSUES.md
docs/architecture/: benchmark-2026-02-25.md  evaluation.md  save.md  search.md  system.md
docs/devlogs/: 2026-02-23-DEVLOG-restructure.md  2026-02-26-DEVLOG-setup-fixes.md
phucnt_telegram_kioku_backup/: 2026-02-24.md  2026-02-25.md  2026-02-26.md  README.md  restore.py  restore_today.py
phucnt_telegram_kioku_backup/memory/: 2026-02-22.md  2026-02-23.md
scripts/: clean_test_data.py  docker-entrypoint.sh  migrate_tenant.py  setup.sh
skills/kioku/: SKILL.md
src/kioku/: __init__.py  cli.py  config.py  server.py  service.py
src/kioku/pipeline/: embedder.py  extractor.py  graph_writer.py  keyword_writer.py  vector_writer.py
src/kioku/resources/: CLAUDE.agent.md  SKILL.md  docker-compose.yml
src/kioku/search/: bm25.py  graph.py  reranker.py  semantic.py
src/kioku/storage/: markdown.py
tests/: README.md  benchmark_after.json  benchmark_after_entity_fix.json  benchmark_after_entity_fix_v2.json  benchmark_after_reingest.json  benchmark_before.json  benchmark_search.py  e2e_cli.py  e2e_mcp_client.py  test_bm25.py  test_graph.py  test_reranker.py  test_server.py  test_storage.py  test_vector.py
