[project]
name = "kioku-mcp"
version = "0.1.0"
description = "Personal memory MCP server with tri-hybrid search (BM25 + Vector + KG)"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.0.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
phase2 = [
    "chromadb>=0.6",
    "ollama>=0.4",
]
phase3 = [
    "falkordb>=1.0",
    "anthropic>=0.40",
]
all = [
    "chromadb>=0.6",
    "ollama>=0.4",
    "falkordb>=1.0",
    "anthropic>=0.40",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.hatch.build.targets.wheel]
packages = ["src/kioku"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
