[project]
name = "kioku-agent-kit"
version = "0.2.1"
description = "Personal memory engine for AI agents — tri-hybrid search (BM25 + Vector + KG), CLI & MCP interfaces"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "Phúc Nguyễn", email = "phucnt@example.com" }]
keywords = ["memory", "agent", "ai", "rag", "knowledge-graph", "mcp", "claude"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "python-dotenv>=1.0",
]

[project.urls]
Homepage = "https://github.com/phuc-nt/kioku-agent-kit"
Repository = "https://github.com/phuc-nt/kioku-agent-kit"
Issues = "https://github.com/phuc-nt/kioku-agent-kit/issues"

[project.optional-dependencies]
cli = ["typer>=0.24.1"]
mcp = ["fastmcp>=2.0.0"]
vector = ["chromadb>=0.6", "ollama>=0.4"]
graph = ["falkordb>=1.0", "anthropic>=0.40"]
full = [
    "typer>=0.24.1",
    "fastmcp>=2.0.0",
    "chromadb>=0.6",
    "ollama>=0.4",
    "falkordb>=1.0",
    "anthropic>=0.40",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
]

[project.scripts]
kioku = "kioku.cli:app"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.hatch.build.targets.wheel]
packages = ["src/kioku"]
artifacts = ["src/kioku/resources/*"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
